# X-Pose

./: .gitignore  README.md  app.py  inference_on_a_image.py  pyproject.toml  setup.sh
