[project]
name = "x-pose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "clip",
    "ftfy>=6.3.1",
    "gradio>=5.34.2",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.3",
    "multiscaledeformableattention",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "termcolor>=3.1.0",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "yapf>=0.43.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
multiscaledeformableattention = { path = "models/UniPose/ops" }
